Change of Coins by dynamic programming